[gd_scene load_steps=30 format=2]

[ext_resource path="res://art/Player/PlayerTop2.png" type="Texture" id=1]
[ext_resource path="res://art/Player/PlayerRight2.png" type="Texture" id=2]
[ext_resource path="res://art/Player/PlayerLeft2.png" type="Texture" id=3]
[ext_resource path="res://art/Player/PlayerBottom3.png" type="Texture" id=4]
[ext_resource path="res://art/Player/PlayerDying2.png" type="Texture" id=5]
[ext_resource path="res://art/Player/PlayerTop1.png" type="Texture" id=6]
[ext_resource path="res://art/Player/PlayerBottom1.png" type="Texture" id=7]
[ext_resource path="res://art/Player/PlayerLeft1.png" type="Texture" id=8]
[ext_resource path="res://art/Player/PlayerRight1.png" type="Texture" id=9]
[ext_resource path="res://art/Player/PlayerRight3.png" type="Texture" id=10]
[ext_resource path="res://art/Player/PlayerDying1.png" type="Texture" id=11]
[ext_resource path="res://art/Player/PlayerBottom2.png" type="Texture" id=12]
[ext_resource path="res://art/Player/PlayerTop3.png" type="Texture" id=13]
[ext_resource path="res://art/Player/PlayerLeft3.png" type="Texture" id=14]
[ext_resource path="res://art/Player/PlayerDying3.png" type="Texture" id=15]
[ext_resource path="res://audio/sound/shoot.ogg" type="AudioStream" id=16]
[ext_resource path="res://art/UI/ArrowIndicators/ArrowIndicatorPlayer.png" type="Texture" id=17]
[ext_resource path="res://art/UI/ArrowIndicators/ArrowIndicatorAlly.png" type="Texture" id=18]
[ext_resource path="res://scripts/gameplay/player.gd" type="Script" id=19]
[ext_resource path="res://art/Player/PlayerGib.png" type="Texture" id=20]
[ext_resource path="res://prefabs/projectiles/ProjectilePlayerBullet.tscn" type="PackedScene" id=21]
[ext_resource path="res://prefabs/weapon.tscn" type="PackedScene" id=22]
[ext_resource path="res://prefabs/projectiles/ProjectilePlayerHarpoon.tscn" type="PackedScene" id=23]
[ext_resource path="res://audio/sound/harpoon.ogg" type="AudioStream" id=24]
[ext_resource path="res://audio/sound/shotgun.ogg" type="AudioStream" id=25]
[ext_resource path="res://audio/sound/TakeDMG.ogg" type="AudioStream" id=26]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 5 ), ExtResource( 15 ), ExtResource( 20 ) ],
"loop": false,
"name": "Dying",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 13 ) ],
"loop": true,
"name": "MoveTop",
"speed": 10.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "IdleRight",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 4 ) ],
"loop": true,
"name": "MoveBottom",
"speed": 10.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "IdleLeft",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "IdleTop",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "IdleBottom",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 14 ) ],
"loop": true,
"name": "MoveLeft",
"speed": 10.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "MoveRight",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.3277
height = 0.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 19 )
dash_speed_multiplier = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "IdleBottom"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="Indicator" type="Sprite" parent="."]

[node name="ArrowIndicatorAlly" type="Sprite" parent="Indicator"]
visible = false
position = Vector2( 0, -48 )
texture = ExtResource( 18 )

[node name="ArrowIndicatorPlayer" type="Sprite" parent="Indicator"]
visible = false
position = Vector2( 0, -48 )
texture = ExtResource( 17 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = -18.0
custom_styles/fg = SubResource( 3 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pistol" parent="." instance=ExtResource( 22 )]
attack_rate = 0.2
projectile_scene = ExtResource( 21 )
shoot_sound = ExtResource( 16 )

[node name="Uzi" parent="." instance=ExtResource( 22 )]
attack_rate = 0.1
projectile_scene = ExtResource( 21 )
shoot_sound = ExtResource( 16 )

[node name="Shotgun" parent="." instance=ExtResource( 22 )]
attack_rate = 1.0
spread_amount = 4
spread_angle = 15.0
projectile_scene = ExtResource( 21 )
shoot_sound = ExtResource( 25 )

[node name="Harpoon" parent="." instance=ExtResource( 22 )]
attack_rate = 1.0
projectile_scene = ExtResource( 23 )
shoot_sound = ExtResource( 24 )

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 26 )

[node name="DashDurationTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="EquipWeaponTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DashDurationTimer" to="." method="_on_DashDurationTimer_timeout"]
[connection signal="timeout" from="DashCooldownTimer" to="." method="_on_DashCooldownTimer_timeout"]
[connection signal="timeout" from="EquipWeaponTimer" to="." method="_on_EquipWeaponTimer_timeout"]
